# Raytracer

./: CMakeLists.txt  Readme.md  camera.h  color.h  cube.h  hittable.h  hittable_list.h  interval.h  main.cpp  ray.h  rtweekend.h  simple_image_output.cpp  sphere.h  vec3.h
past codes/: ancient_ppm_runner.py  hit_sphere.cpp
tests_and_temps/: test.py
